<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.5.6</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  
  <groupId>com.algaworks</groupId>
  <artifactId>algafood-api</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>algafood-api</name>
  <description>API de delivery de comida</description>

  <properties>
    <java.version>12</java.version>
    <modelmapper.version>3.0.0</modelmapper.version>
    <squiggly.version>1.3.18</squiggly.version>
    <jasperreports.version>6.15.0</jasperreports.version>
    <aws-java-sdk-s3.version>1.11.671</aws-java-sdk-s3.version>
	<guava.version>31.0.1-jre</guava.version> 
    <springfox.version>3.0.0</springfox.version>
  </properties>

  <dependencies>
	  
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    
    <dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    
    <dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-validation</artifactId>
	</dependency>
	
	<dependency>
	  <groupId>io.springfox</groupId>
	  <artifactId>springfox-boot-starter</artifactId>
	  <version>${springfox.version}</version>
	</dependency>
	
	<dependency>
		<groupId>io.springfox</groupId>
		<artifactId>springfox-bean-validators</artifactId>
		<version>${springfox.version}</version>
	</dependency>
    
    <dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<scope>runtime</scope>
    </dependency>
    
    <dependency>
    	<groupId>org.projectlombok</groupId>
    	<artifactId>lombok</artifactId>
    </dependency>
    
    <dependency>
    	<groupId>org.flywaydb</groupId>
    	<artifactId>flyway-core</artifactId>
    </dependency>
    
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-lang3</artifactId>
    </dependency>
    
    <dependency>
    	<groupId>io.rest-assured</groupId>
    	<artifactId>rest-assured</artifactId>
    	<scope>test</scope>
    </dependency>
   
    <dependency>
  		<groupId>org.modelmapper</groupId>
  		<artifactId>modelmapper</artifactId>
		<version>${modelmapper.version}</version>
	</dependency>
	
	<dependency>
		  <groupId>com.google.guava</groupId>
		  <artifactId>guava</artifactId>
		  <version>${guava.version}</version>
	 </dependency>
	
	<dependency>
    	<groupId>com.github.bohnman</groupId>
    	<artifactId>squiggly-filter-jackson</artifactId>
    	<version>${squiggly.version}</version>
    	<exclusions>
			<exclusion>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
			</exclusion>
		</exclusions>
	</dependency>

	<dependency>
	  <groupId>net.sf.jasperreports</groupId>
	  <artifactId>jasperreports</artifactId>
	  <version>${jasperreports.version}</version>
	</dependency>
	
	<dependency>
	  <groupId>net.sf.jasperreports</groupId>
	  <artifactId>jasperreports-functions</artifactId>
	  <version>${jasperreports.version}</version>
	</dependency>
	
	<dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-s3</artifactId>
      <version>${aws-java-sdk-s3.version}</version>
	</dependency>
	
	<dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-mail</artifactId>
	</dependency>
	
	<dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-freemarker</artifactId>
	</dependency>
  </dependencies>

  <build>
    <plugins>
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-resources-plugin</artifactId>
		<configuration>
			<nonFilteredFileExtensions>
				<nonFilteredFileExtension>properties</nonFilteredFileExtension>
			</nonFilteredFileExtensions>
		</configuration>
	</plugin> 
    </plugins>
  </build>

</project>